--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ VITE_API_URL = http://localhost:3000
 # VITE_API_URL = https://qbwzncrf-3000.asse.devtunnels.ms
 # VITE_API_URL = https://qbwzncrf-5173.asse.devtunnels.ms
 # VITE_URL = http://localhost:5173
-VITE_URL = hhttps://web-desa-mappetajang-fe.vercel.app
+VITE_URL = https://web-desa-mappetajang-fe.vercel.app
 VITE_MAP_URL = https://api.maptiler.com/maps/satellite/{z}/{x}/{y}.jpg?key=ouapW7jeFLp4KEvIIy6L
